[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdserver"
description = "Simple metadata server"
authors = [
	{name = "Simon Fowler", email = "simon.fowler@anu.edu.au"},
]
license = {text = "MIT"}
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
	"bottle>=0.12.0",
	"xmltodict>=0.9.0",
]

[project.urls]
repository = "https://github.com/sjjf/md_server"

[project.scripts]
mdserver = "mdserver.server:main"

[project.optional-dependencies]
tests = [
	"pytest>=4.6.0",
	"black"
]

[tool.setuptools.packages]
find = {include = ["mdserver*"]}

[tool.setuptools_scm]
write_to = "mdserver/_version.py"

[tool.isort]
profile = "black"
force_single_line = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
