[bdist_rpm]
requires = python-bottle >= 0.12.0
    python-xmltodict >= 0.9.0

[metadata]
name = mdserver
description = Simple metadata server
version = attr: mdserver.version.VERSION
author = Simon Fowler
author_email = simon.fowler@anu.edu.au
license = MIT
license_files = LICENSE.txt
url = https://github.com/sjjf/md_server

[options]
packages = mdserver
python_requires = >=3.7
include_package_data = True

[options.extras_require]
tests =
	pytest>=4.6.0
	black
